@@ -1,0 +1,295 @@
+Options selected:
+  Starting page = * 
+  Maximum number of pages = 1000000
+  Output level = 4 (the works)
+  Resolution = 300.00000000 pixels per inch
+numerator/denominator=25400000/473628672
+magnification=1000;       0.00006334 pixels per DVI unit
+' TeX output 20XX.XX.XX'
+Postamble starts at byte 635.
+maxv=43725786, maxh=30785863, maxstackdepth=2, totalpages=1
+Font 1: min10 (JFM)---loaded at size 655360 DVI units 
+Font 0: ec-lmr10---loaded at size 655360 DVI units 
+ 
+42: beginning of page 1 
+87: push 
+level 0:(h=0,v=0,w=0,x=0,y=0,z=0,hh=0,vv=0) 
+88: down3 -917504 v:=0-917504=-917504, vv:=-58 
+92: pop 
+level 0:(h=0,v=0,w=0,x=0,y=0,z=0,hh=0,vv=0) 
+93: down4 42152922 v:=0+42152922=42152922, vv:=2670 
+98: push 
+level 0:(h=0,v=42152922,w=0,x=0,y=0,z=0,hh=0,vv=2670) 
+99: down4 -41497562 v:=42152922-41497562=655360, vv:=42 
+104: push 
+level 1:(h=0,v=655360,w=0,x=0,y=0,z=0,hh=0,vv=42) 
+105: right3 1310720 h:=0+1310720=1310720, hh:=83 
+[ ]
+109: fntdef1 0: ec-lmr10 
+133: fntnum0 current font is ec-lmr10 
+134: setchar48 ("30) h:=1310720+327680=1638400, hh:=104 
+[0]
+135: fntdef1 1: min10 
+156: fntnum1 current font is min10 
+157: set2 8737("2221) type=0 h:=1638400+630598=2268998, hh:=144 
+160: set2 8737("2221) type=0 h:=2268998+630598=2899596, hh:=184 
+163: set2 8574("217E) type=0 h:=2899596+630598=3530194, hh:=224 
+166: set2 9250("2422) type=0 h:=3530194+630598=4160792, hh:=264 
+169: set2 8574("217E) type=0 h:=4160792+630598=4791390, hh:=304 
+172: set2 9252("2424) type=0 h:=4791390+630598=5421988, hh:=344 
+175: set2 8737("2221) type=0 h:=5421988+630598=6052586, hh:=384 
+178: set2 8574("217E) type=0 h:=6052586+630598=6683184, hh:=424 
+181: set2 8737("2221) type=0 h:=6683184+630598=7313782, hh:=464 
+184: set2 8574("217E) type=0 h:=7313782+630598=7944380, hh:=504 
+187: set2 13377("3441) type=0 h:=7944380+630598=8574978, hh:=544 
+190: set2 15226("3B7A) type=0 h:=8574978+630598=9205576, hh:=584 
+[◆◆◇あ◇い◆◇◆◇漢字]
+193: fntnum0 current font is ec-lmr10 
+194: setchar83 ("53) h:=9205576+364085=9569661, hh:=607 
+195: setchar97 ("61) h:=9569661+327680=9897341, hh:=628 
+196: right3 655360 h:=9897341+655360=10552701, hh:=668 
+200: setchar112 ("70) h:=10552701+364085=10916786, hh:=691 
+201: setchar52 ("34) h:=10916786+327680=11244466, hh:=712 
+202: setchar46 ("2E) h:=11244466+182043=11426509, hh:=724 
+203: setchar48 ("30) h:=11426509+327680=11754189, hh:=745 
+204: setchar46 ("2E) h:=11754189+182043=11936232, hh:=757 
+205: setchar48 ("30) h:=11936232+327680=12263912, hh:=778 
+[Sa p4.0.0]
+206: fntnum1 current font is min10 
+207: set2 12362("304A) type=0 h:=12263912+630598=12894510, hh:=818 
+210: set2 14687("395F) type=0 h:=12894510+630598=13525108, hh:=858 
+[以降]
+213: pop 
+level 1:(h=0,v=655360,w=0,x=0,y=0,z=0,hh=0,vv=42) 
+214: y3 786432 v:=655360+786432=1441792, vv:=91 
+218: push 
+level 1:(h=0,v=1441792,w=0,x=0,y=786432,z=0,hh=0,vv=91) 
+219: right3 1310720 h:=0+1310720=1310720, hh:=83 
+[ ]
+223: fntnum0 current font is ec-lmr10 
+224: setchar49 ("31) h:=1310720+327680=1638400, hh:=104 
+[1]
+225: fntnum1 current font is min10 
+226: set2 8737("2221) type=0 h:=1638400+630598=2268998, hh:=144 
+229: set2 8737("2221) type=0 h:=2268998+630598=2899596, hh:=184 
+232: set2 8574("217E) type=0 h:=2899596+630598=3530194, hh:=224 
+235: set2 9250("2422) type=0 h:=3530194+630598=4160792, hh:=264 
+238: set2 8574("217E) type=0 h:=4160792+630598=4791390, hh:=304 
+241: set2 9252("2424) type=0 h:=4791390+630598=5421988, hh:=344 
+244: set2 8737("2221) type=0 h:=5421988+630598=6052586, hh:=384 
+247: set2 8574("217E) type=0 h:=6052586+630598=6683184, hh:=424 
+250: right3 218453 h:=6683184+218453=6901637, hh:=437 
+254: set2 8737("2221) type=0 h:=6901637+630598=7532235, hh:=477 
+257: set2 8574("217E) type=0 h:=7532235+630598=8162833, hh:=517 
+260: set2 13377("3441) type=0 h:=8162833+630598=8793431, hh:=557 
+263: set2 15226("3B7A) type=0 h:=8793431+630598=9424029, hh:=597 
+[◆◆◇あ◇い◆◇ ◆◇漢字]
+266: fntnum0 current font is ec-lmr10 
+267: setchar83 ("53) h:=9424029+364085=9788114, hh:=620 
+268: setchar97 ("61) h:=9788114+327680=10115794, hh:=641 
+269: right3 655360 h:=10115794+655360=10771154, hh:=682 
+273: setchar112 ("70) h:=10771154+364085=11135239, hh:=705 
+274: setchar51 ("33) h:=11135239+327680=11462919, hh:=726 
+275: setchar46 ("2E) h:=11462919+182043=11644962, hh:=738 
+276: setchar56 ("38) h:=11644962+327680=11972642, hh:=759 
+277: setchar46 ("2E) h:=11972642+182043=12154685, hh:=771 
+278: setchar50 ("32) h:=12154685+327680=12482365, hh:=792 
+[Sa p3.8.2]
+279: fntnum1 current font is min10 
+280: set2 12362("304A) type=0 h:=12482365+630598=13112963, hh:=832 
+283: set2 14687("395F) type=0 h:=13112963+630598=13743561, hh:=872 
+[以降]
+286: pop 
+level 1:(h=0,v=1441792,w=0,x=0,y=786432,z=0,hh=0,vv=91) 
+287: y0 786432 v:=1441792+786432=2228224, vv:=141 
+288: push 
+level 1:(h=0,v=2228224,w=0,x=0,y=786432,z=0,hh=0,vv=141) 
+289: right3 1310720 h:=0+1310720=1310720, hh:=83 
+[ ]
+293: fntnum0 current font is ec-lmr10 
+294: setchar50 ("32) h:=1310720+327680=1638400, hh:=104 
+[2]
+295: fntnum1 current font is min10 
+296: set2 8737("2221) type=0 h:=1638400+630598=2268998, hh:=144 
+299: set2 8737("2221) type=0 h:=2268998+630598=2899596, hh:=184 
+302: set2 8574("217E) type=0 h:=2899596+630598=3530194, hh:=224 
+305: w3 218453 h:=3530194+218453=3748647, hh:=237 
+309: set2 9250("2422) type=0 h:=3748647+630598=4379245, hh:=277 
+312: set2 8574("217E) type=0 h:=4379245+630598=5009843, hh:=317 
+315: w0 218453 h:=5009843+218453=5228296, hh:=331 
+316: set2 9252("2424) type=0 h:=5228296+630598=5858894, hh:=371 
+319: set2 8737("2221) type=0 h:=5858894+630598=6489492, hh:=411 
+322: set2 8574("217E) type=0 h:=6489492+630598=7120090, hh:=451 
+325: set2 8737("2221) type=0 h:=7120090+630598=7750688, hh:=491 
+328: set2 8574("217E) type=0 h:=7750688+630598=8381286, hh:=531 
+331: set2 13377("3441) type=0 h:=8381286+630598=9011884, hh:=571 
+334: set2 15226("3B7A) type=0 h:=9011884+630598=9642482, hh:=611 
+[◆◆◇ あ◇ い◆◇◆◇漢字]
+337: fntnum0 current font is ec-lmr10 
+338: setchar83 ("53) h:=9642482+364085=10006567, hh:=634 
+339: setchar97 ("61) h:=10006567+327680=10334247, hh:=655 
+[Sa]
+340: pop 
+level 1:(h=0,v=2228224,w=0,x=0,y=786432,z=0,hh=0,vv=141) 
+341: y0 786432 v:=2228224+786432=3014656, vv:=191 
+342: push 
+level 1:(h=0,v=3014656,w=0,x=0,y=786432,z=0,hh=0,vv=191) 
+343: right3 1310720 h:=0+1310720=1310720, hh:=83 
+347: setchar51 ("33) h:=1310720+327680=1638400, hh:=104 
+[ 3]
+348: fntnum1 current font is min10 
+349: set2 8737("2221) type=0 h:=1638400+630598=2268998, hh:=144 
+352: set2 8737("2221) type=0 h:=2268998+630598=2899596, hh:=184 
+355: set2 8574("217E) type=0 h:=2899596+630598=3530194, hh:=224 
+358: w3 218453 h:=3530194+218453=3748647, hh:=237 
+362: set2 9250("2422) type=0 h:=3748647+630598=4379245, hh:=277 
+365: set2 8574("217E) type=0 h:=4379245+630598=5009843, hh:=317 
+368: w0 218453 h:=5009843+218453=5228296, hh:=331 
+369: set2 9252("2424) type=0 h:=5228296+630598=5858894, hh:=371 
+372: set2 8737("2221) type=0 h:=5858894+630598=6489492, hh:=411 
+375: set2 8574("217E) type=0 h:=6489492+630598=7120090, hh:=451 
+378: w0 218453 h:=7120090+218453=7338543, hh:=465 
+379: set2 8737("2221) type=0 h:=7338543+630598=7969141, hh:=505 
+382: set2 8574("217E) type=0 h:=7969141+630598=8599739, hh:=545 
+385: set2 13377("3441) type=0 h:=8599739+630598=9230337, hh:=585 
+388: set2 15226("3B7A) type=0 h:=9230337+630598=9860935, hh:=625 
+[◆◆◇ あ◇ い◆◇ ◆◇漢字]
+391: fntnum0 current font is ec-lmr10 
+392: setchar83 ("53) h:=9860935+364085=10225020, hh:=648 
+393: setchar97 ("61) h:=10225020+327680=10552700, hh:=669 
+394: right3 655360 h:=10552700+655360=11208060, hh:=710 
+398: setchar112 ("70) h:=11208060+364085=11572145, hh:=733 
+399: setchar51 ("33) h:=11572145+327680=11899825, hh:=754 
+400: setchar46 ("2E) h:=11899825+182043=12081868, hh:=766 
+401: setchar56 ("38) h:=12081868+327680=12409548, hh:=787 
+402: setchar46 ("2E) h:=12409548+182043=12591591, hh:=799 
+403: setchar49 ("31) h:=12591591+327680=12919271, hh:=820 
+[Sa p3.8.1]
+404: fntnum1 current font is min10 
+405: set2 12362("304A) type=0 h:=12919271+630598=13549869, hh:=860 
+408: set2 16688("4130) type=0 h:=13549869+630598=14180467, hh:=900 
+[以前]
+411: pop 
+level 1:(h=0,v=3014656,w=0,x=0,y=786432,z=0,hh=0,vv=191) 
+412: y0 786432 v:=3014656+786432=3801088, vv:=241 
+413: push 
+level 1:(h=0,v=3801088,w=0,x=0,y=786432,z=0,hh=0,vv=241) 
+414: right3 1310720 h:=0+1310720=1310720, hh:=83 
+[ ]
+418: fntnum0 current font is ec-lmr10 
+419: setchar52 ("34) h:=1310720+327680=1638400, hh:=104 
+[4]
+420: fntnum1 current font is min10 
+421: set2 8737("2221) type=0 h:=1638400+630598=2268998, hh:=144 
+424: w3 218453 h:=2268998+218453=2487451, hh:=158 
+428: set2 8737("2221) type=0 h:=2487451+630598=3118049, hh:=198 
+431: set2 8574("217E) type=0 h:=3118049+630598=3748647, hh:=238 
+434: set2 9250("2422) type=0 h:=3748647+630598=4379245, hh:=278 
+437: set2 8574("217E) type=0 h:=4379245+630598=5009843, hh:=318 
+440: w0 218453 h:=5009843+218453=5228296, hh:=331 
+441: set2 9252("2424) type=0 h:=5228296+630598=5858894, hh:=371 
+444: set2 8737("2221) type=0 h:=5858894+630598=6489492, hh:=411 
+447: set2 8574("217E) type=0 h:=6489492+630598=7120090, hh:=451 
+450: set2 8737("2221) type=0 h:=7120090+630598=7750688, hh:=491 
+453: set2 8574("217E) type=0 h:=7750688+630598=8381286, hh:=531 
+456: set2 13377("3441) type=0 h:=8381286+630598=9011884, hh:=571 
+459: set2 15226("3B7A) type=0 h:=9011884+630598=9642482, hh:=611 
+[◆ ◆◇あ◇ い◆◇◆◇漢字]
+462: fntnum0 current font is ec-lmr10 
+463: setchar83 ("53) h:=9642482+364085=10006567, hh:=634 
+464: setchar97 ("61) h:=10006567+327680=10334247, hh:=655 
+[Sa]
+465: pop 
+level 1:(h=0,v=3801088,w=0,x=0,y=786432,z=0,hh=0,vv=241) 
+466: y0 786432 v:=3801088+786432=4587520, vv:=291 
+467: push 
+level 1:(h=0,v=4587520,w=0,x=0,y=786432,z=0,hh=0,vv=291) 
+468: right3 1310720 h:=0+1310720=1310720, hh:=83 
+472: setchar53 ("35) h:=1310720+327680=1638400, hh:=104 
+[ 5]
+473: fntnum1 current font is min10 
+474: set2 8737("2221) type=0 h:=1638400+630598=2268998, hh:=144 
+477: w3 218453 h:=2268998+218453=2487451, hh:=158 
+481: set2 8737("2221) type=0 h:=2487451+630598=3118049, hh:=198 
+484: set2 8574("217E) type=0 h:=3118049+630598=3748647, hh:=238 
+487: set2 9250("2422) type=0 h:=3748647+630598=4379245, hh:=278 
+490: set2 8574("217E) type=0 h:=4379245+630598=5009843, hh:=318 
+493: w0 218453 h:=5009843+218453=5228296, hh:=331 
+494: set2 9252("2424) type=0 h:=5228296+630598=5858894, hh:=371 
+497: set2 8737("2221) type=0 h:=5858894+630598=6489492, hh:=411 
+500: set2 8574("217E) type=0 h:=6489492+630598=7120090, hh:=451 
+503: w0 218453 h:=7120090+218453=7338543, hh:=465 
+504: set2 8737("2221) type=0 h:=7338543+630598=7969141, hh:=505 
+507: set2 8574("217E) type=0 h:=7969141+630598=8599739, hh:=545 
+510: set2 13377("3441) type=0 h:=8599739+630598=9230337, hh:=585 
+513: set2 15226("3B7A) type=0 h:=9230337+630598=9860935, hh:=625 
+[◆ ◆◇あ◇ い◆◇ ◆◇漢字]
+516: fntnum0 current font is ec-lmr10 
+517: setchar83 ("53) h:=9860935+364085=10225020, hh:=648 
+518: setchar97 ("61) h:=10225020+327680=10552700, hh:=669 
+[Sa]
+519: pop 
+level 1:(h=0,v=4587520,w=0,x=0,y=786432,z=0,hh=0,vv=291) 
+520: y0 786432 v:=4587520+786432=5373952, vv:=340 
+521: push 
+level 1:(h=0,v=5373952,w=0,x=0,y=786432,z=0,hh=0,vv=340) 
+522: right3 1310720 h:=0+1310720=1310720, hh:=83 
+526: setchar54 ("36) h:=1310720+327680=1638400, hh:=104 
+[ 6]
+527: fntnum1 current font is min10 
+528: set2 8737("2221) type=0 h:=1638400+630598=2268998, hh:=144 
+531: w3 218453 h:=2268998+218453=2487451, hh:=158 
+535: set2 8737("2221) type=0 h:=2487451+630598=3118049, hh:=198 
+538: set2 8574("217E) type=0 h:=3118049+630598=3748647, hh:=238 
+541: w0 218453 h:=3748647+218453=3967100, hh:=251 
+542: set2 9250("2422) type=0 h:=3967100+630598=4597698, hh:=291 
+545: set2 8574("217E) type=0 h:=4597698+630598=5228296, hh:=331 
+548: w0 218453 h:=5228296+218453=5446749, hh:=345 
+549: set2 9252("2424) type=0 h:=5446749+630598=6077347, hh:=385 
+552: set2 8737("2221) type=0 h:=6077347+630598=6707945, hh:=425 
+555: set2 8574("217E) type=0 h:=6707945+630598=7338543, hh:=465 
+558: set2 8737("2221) type=0 h:=7338543+630598=7969141, hh:=505 
+561: set2 8574("217E) type=0 h:=7969141+630598=8599739, hh:=545 
+564: set2 13377("3441) type=0 h:=8599739+630598=9230337, hh:=585 
+567: set2 15226("3B7A) type=0 h:=9230337+630598=9860935, hh:=625 
+[◆ ◆◇ あ◇ い◆◇◆◇漢字]
+570: fntnum0 current font is ec-lmr10 
+571: setchar83 ("53) h:=9860935+364085=10225020, hh:=648 
+572: setchar97 ("61) h:=10225020+327680=10552700, hh:=669 
+[Sa]
+573: pop 
+level 1:(h=0,v=5373952,w=0,x=0,y=786432,z=0,hh=0,vv=340) 
+574: y0 786432 v:=5373952+786432=6160384, vv:=390 
+575: push 
+level 1:(h=0,v=6160384,w=0,x=0,y=786432,z=0,hh=0,vv=390) 
+576: right3 1310720 h:=0+1310720=1310720, hh:=83 
+580: setchar55 ("37) h:=1310720+327680=1638400, hh:=104 
+[ 7]
+581: fntnum1 current font is min10 
+582: set2 8737("2221) type=0 h:=1638400+630598=2268998, hh:=144 
+585: w3 218453 h:=2268998+218453=2487451, hh:=158 
+589: set2 8737("2221) type=0 h:=2487451+630598=3118049, hh:=198 
+592: set2 8574("217E) type=0 h:=3118049+630598=3748647, hh:=238 
+595: w0 218453 h:=3748647+218453=3967100, hh:=251 
+596: set2 9250("2422) type=0 h:=3967100+630598=4597698, hh:=291 
+599: set2 8574("217E) type=0 h:=4597698+630598=5228296, hh:=331 
+602: w0 218453 h:=5228296+218453=5446749, hh:=345 
+603: set2 9252("2424) type=0 h:=5446749+630598=6077347, hh:=385 
+606: set2 8737("2221) type=0 h:=6077347+630598=6707945, hh:=425 
+609: set2 8574("217E) type=0 h:=6707945+630598=7338543, hh:=465 
+612: w0 218453 h:=7338543+218453=7556996, hh:=479 
+613: set2 8737("2221) type=0 h:=7556996+630598=8187594, hh:=519 
+616: set2 8574("217E) type=0 h:=8187594+630598=8818192, hh:=559 
+619: set2 13377("3441) type=0 h:=8818192+630598=9448790, hh:=599 
+622: set2 15226("3B7A) type=0 h:=9448790+630598=10079388, hh:=639 
+[◆ ◆◇ あ◇ い◆◇ ◆◇漢字]
+625: fntnum0 current font is ec-lmr10 
+626: setchar83 ("53) h:=10079388+364085=10443473, hh:=662 
+627: setchar97 ("61) h:=10443473+327680=10771153, hh:=683 
+[Sa]
+628: pop 
+level 1:(h=0,v=6160384,w=0,x=0,y=786432,z=0,hh=0,vv=390) 
+629: pop 
+level 0:(h=0,v=42152922,w=0,x=0,y=0,z=0,hh=0,vv=2670) 
+630: down3 1572864 v:=42152922+1572864=43725786, vv:=2770 
+634: eop 
