@@ -1,3 +1,9 @@
+2024-09-21  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* ptex-base.ch, uptex-m.ch:
+	Fix a bug in initialization of inhibit_xsp/kinsoku tables
+	(Bug introduced on commit 2022-12-12 r65248).
+
 2024-09-16  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* ptex-base.ch: Use constants enc_jis and enc_ucs.
