@@ -1,3 +1,13 @@
+2024-09-21  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* ptex-base.ch:
+	Fix a bug in initialization of inhibit_xsp/kinsoku tables
+	(Bug introduced on commit 2022-12-12 r65248).
+	* ptex-ctrlsym.test, tests/{ptexlineendmode,ucs}.tex,
+	(chartoken,ucs-{e,s}}.log, p-lineenda.typ:
+	Add more regression tests.
+	* am/ptex.am: Adjust.
+
 2024-09-16  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* ptex-base.ch: Use constants enc_jis and enc_ucs.
